--- a/exp1/package.json
+++ b/exp1/package.json
@@ -20,6 +20,7 @@
     "@opam/dune": "*",
     "@opam/lambda-term": "*",
     "@opam/lwt": "^4.0.0",
+    "@opam/containers": "*",
     "ocaml": "~4.6.0"
   },
   "devDependencies": {
