--- a/exp1/lib/dune
+++ b/exp1/lib/dune
@@ -1,4 +1,4 @@
 (library
   (name lib)
   (public_name hello-ocaml)
-  (libraries containers containers.data))
+  (libraries containers containers.data csv))
